fix(style): contrast up

--- a/src/components/atoms/Footer/styles.module.css
+++ b/src/components/atoms/Footer/styles.module.css
@@ -7,7 +7,7 @@
 }
 .nav li::after {
   content: "|";
-  color: #a5b2cb;
+  color: #dfe0e4;
 }
 .nav li:last-child::after {
   content: none;
@@ -15,10 +15,10 @@
 .nav li a {
   display: inline-block;
   padding: 0 12px;
-  color: #7b8598;
+  color: #464e5e;
 }
 .module address {
   padding: 24px;
   text-align: center;
-  color: #ccc;
+  color: #464e5e;
 }
