--- a/src/components/organisms/Aside/styles.module.css
+++ b/src/components/organisms/Aside/styles.module.css
@@ -5,5 +5,5 @@
 .nav li a {
   display: block;
   padding: 12px 24px;
-  color: #7b8598;
+  color: #464e5e;
 }
